[FE] Fix text overflow (titled-list item).

--- a/frontend/src/app/shared/components/titled-items-list/titled-items-list.component.scss
+++ b/frontend/src/app/shared/components/titled-items-list/titled-items-list.component.scss
@@ -75,6 +75,9 @@
 
       .titled-item {
         font-size: 12px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
     }
   }
